<resources>
    <string name="app_name">Tour Guide</string>
    <string name="data_uri_scheme">geo:0,0?q=</string>
    <string name="plus">+</string>
    <string name="delimiter">&#160;</string>
    <string name="title_category_visit">Visit</string>
    <string name="title_category_eat">Eat</string>
    <string name="title_category_night_life">Night Life</string>
    <string name="title_category_travel">Travel</string>
    <string name="header_place">Delhi</string>
    <string name="detail_label_location">Location</string>
    <string name="label_popular">Popular</string>
    <string name="label_cost">Average Cost</string>
    <string name="toast_app_not_available">No Maps app found on your device.</string>
    <string name="chip_metro">Metro</string>
    <string name="chip_hospital">Hospital</string>
    <string name="chip_police">Station</string>
    <string name="description_image">Place</string>
    <string name="label_timings">Timings</string>
    <string name="label_entry_fee">Entry Fee</string>
    <string name="category_visit">Places To Visit</string>
    <string name="category_eat">Places To Eat</string>
    <string name="category_night_life">Night Life</string>
    <string name="category_travel">Travel</string>
    <string name="title_place_akshardham_temple">Akshardam Temple</string>
    <string name="detail_place_akshardham_temple">Dedicated to Bhagwan Swaminarayan, Akshardham Temple exhibits the ancient culture of India.\n\nThe temple complex maintains a step-well styled courtyard and 60 acres of lush lawns featuring the bronze statues of Indian heroes, including patriots and warriors. Registered as the World\'s largest comprehensive Hindu temple in the Guinness World Record, the temple is an architectural marvel built from intricately carved sandstone and marble.\n\nFurthermore, the temple organizes exhibitions on Swaminarayan\'s life teachings and also organises a musical fountain and light show after sunset every day.</string>
    <string name="timings_akshardham_temple">9:30 am to 06:30 pm</string>
    <string name="entry_fee_akshardham_temple">Adults - ₹ 170 | Children - ₹ 100</string>
    <string name="nearest_metro_akshardham_temple">Akshardham, Metro Station Akshardham, Noida Link Road, Ganesh Nagar, New Delhi, Delhi</string>
    <string name="nearest_hospital_akshardham_temple">RK Hospital Pandav Nagara</string>
    <string name="nearest_station_akshardham_temple">Pandav Nagar Police Station</string>
    <string name="title_place_red_fort">Red Fort</string>
    <string name="detail_place_red_fort">Constructed in 1639 by the Mughals, Red Fort gets its name from its massive red-coloured sandstone walls.\n\nSet in Old Delhi, the octagonal-shaped fort is spread over an area of 254 acres. The planning and designing of the fort is a fusion of Mughal, Persian, Hindu, and Timurid traditions.\n\nA strong influence on later structures built in and around Delhi, Red Fort also features a museum that holds Mughal-era artefacts, including daggers, curtains, miniature paintings and carpets. The highlights of this architectural creativity include the peacock throne, step well, imperial bath, Moti Masjid and Hira Mahal.</string>
    <string name="timings_red_fort">09:30 am to 04:30 pm (Closed on Mondays)</string>
    <string name="entry_fee_red_fort">Indian Citizens - ₹ 10 | Foreign Nationals - ₹ 150</string>
    <string name="nearest_metro_red_fort">Lal Qila Metro Station</string>
    <string name="nearest_hospital_red_fort">Saraf Hospital J6WR+JXV, Daryaganj, New Delhi, Delhi 110002</string>
    <string name="nearest_station_red_fort">Police Station Jama Masjid</string>
    <string name="title_place_india_gate">India Gate</string>
    <string name="detail_place_india_gate">India Gate symbolises the sacrifice of 70,000 Indian soldiers who lost their lives battling against the foreign army during the World War I.\n\nDesigned by Edwin Lutyens, it features the undying Amar Jawan Jyoti or the Flame of the Immortal Soldier which was added later to honour Indian martyred soldiers in the Indo-Pak War. Furthermore, this beautiful masterpiece is counted amongst the largest war memorials in India.\n\nStanding on a Bharatpur stone base, the structure is surrounded by lush lawns making it a popular picnic spot during winter afternoons and summer evenings. Lit at night, the monument looks magnificent with colourful fountains in the in the vicinity.</string>
    <string name="nearest_metro_india_gate">Central Secretariat Metro Station</string>
    <string name="nearest_hospital_india_gate">Dr. Ram Manohar Lohia Hospital, Delhi 110001</string>
    <string name="nearest_station_india_gate">Police Station Tilak Marg, Delhi 110001</string>
    <string name="title_place_world_of_wonder">Worlds of Wonder</string>
    <string name="detail_place_world_of_wonder">A world-class amusement park, Worlds of Wonder ensures a fun-filled quality-time with your friends and family amidst a variety of attractions.\n\nPopularly known as WOW, it maintains over 20 rides, including Mega Disco, Download, Chart Smashers, Feedback, Fast Forward, Big Beat and Rockin Roller. Its La Fiesta zone, which is meant for your little ones exclusively, features rides like Hippti Hopp, Loco Motion, Space Shot and Samba Rhumba.\n\nSpread over 10 acres of land, the theme park is additionally popular for water rides and go-karting, and also features a pool bar, snack bar and Punjabi dhaba.</string>
    <string name="timings_world_of_wonder">10:30 am to 7:00 pm</string>
    <string name="entry_fee_world_of_wonder">For Amusement Park and Water Park: Adults - ₹ 1000 | Children - ₹ 800</string>
    <string name="nearest_metro_world_of_wonder">Botanical Garden Metro Station Uttar Pradesh 201301</string>
    <string name="nearest_hospital_world_of_wonder">Bhardwaj Hospital, Nh-1, Sector - 29 Opposite Ganga Shopping Complex, Noida, Uttar Pradesh 201301</string>
    <string name="nearest_station_world_of_wonder">Sector 29 Police Station, 40, Dadri Main Rd, Bhangel, Salarpur Khadar, Sector - 106, Noida, Uttar Pradesh 201303</string>
    <string name="title_place_connaught_place">Connaught Place</string>
    <string name="detail_place_connaught_place">Set in the heart of National Capital and popularly known as CP, Connaught Place is considered as the most expensive commercial markets in the world.\n\nIt is popular for housing showrooms of national and international brands, luxurious hotels and flea markets. The equinoctial sundial, Jantar Mantar, and Gurudwara Bangla Sahib featuring a reflecting pool, are extremely popular among tourists visiting Connaught Place.\n\nNotably, the commercial area got its name from Prince Arthur, 1st Duke of Connaught and Strathearn.</string>
    <string name="nearest_metro_connaught_place">Rajiv Chowk Metro Station</string>
    <string name="nearest_hospital_connaught_place">Smt Sucheta Kriplani Hospital, Delhi 110001</string>
    <string name="nearest_station_connaught_place">Police Chauki, J6P7+5V7, Lady Hardinge Medical College, Munrika, New Delhi, Delhi 110001</string>
    <string name="title_place_dilli_haat">Dilli Haat</string>
    <string name="detail_place_dilli_haat">An outdoor marketplace located near INA Market, Dilli Haat is spread over 6 acres with 62 stalls presenting handicrafts and ethnic cuisine from various parts of India.\n\nIt offers a traditional rural ambience where visitors can admire the rich Indian culture and shop for items suitable to their modern-day requirements.\n\nMoreover, Dilli Haat organizes many cultural events, including dance and music performances, and aims to preserve the heritage of India.</string>
    <string name="timings_dilli_haat">10:00 am to 10:00 pm</string>
    <string name="entry_fee_dilli_haat">Adults - ₹ 30 | Children - ₹ 10 | Foreign Nationals - ₹ 100</string>
    <string name="nearest_metro_dilli_haat">Dilli Haat - INA Metro Station</string>
    <string name="nearest_hospital_dilli_haat">C.G.H.S. Wellness Center 15, Delhi 110023</string>
    <string name="nearest_station_dilli_haat">Police Sahayata Kendra- Police Station, Delhi 110023</string>
    <string name="title_place_qutub_minar">Qutub Minar</string>
    <string name="detail_place_qutub_minar">Qutub Minar is a 73-metre tall minaret, named after Qutb-ud-din Aibak.\n\nThe tower contains 5 distinct tapering storeys, wherein first 3 storeys of this masterpiece are adorned with red sandstone, while the fourth and fifth storeys are constructed in marble and sandstone respectively, engraved with decorative Quranic texts.\n\nInterestingly, the tower has a spiral staircase with 379 steps, and has a mosque named ‘Quwwat-ul-Islam Masjid’ at the foot of the tower, which is the first mosque in India.</string>
    <string name="timings_qutub_minar">7:00 am to 5:00 pm</string>
    <string name="entry_fee_qutub_minar">Indian Citizens - ₹ 30 | Foreign Nationals - ₹ 500</string>
    <string name="nearest_metro_qutub_minar">Qutab Minar Metro Station, Mittal Garden, Sainik Farm, New Delhi, Delhi 110030</string>
    <string name="nearest_hospital_qutub_minar">K.R. Hospital, Delhi 110074</string>
    <string name="nearest_station_qutub_minar">Mehrauli Police Station, Delhi 110030</string>
    <string name="title_place_humayun_tomb">Humayun\'s Tomb</string>
    <string name="detail_place_humayun_tomb">Built in 1565 A.D., the Humayun’s Tomb was established in the memory of Humayun by his widow Bega Begam, and was the first example of Mughal architecture in India.\n\nConstructed after nine years of his demise, the tomb is inspired by Persian architecture which is reflected in the corridors arched alcoves, and the double dome.\n\nThe tomb is also called chaharbagh, owing to its garden squares with passageways water channels, and holds graves of Mughal rulers inside the walled enclosed space.</string>
    <string name="timings_humayun_tomb">6:00 am to 6:00 pm</string>
    <string name="entry_fee_humayun_tomb">Indian Citizens - ₹ 30 | Foreign Nationals - ₹ 500</string>
    <string name="nearest_metro_humayun_tomb">Hazrat Nizamuddin Metro Station, Block A, Ganga Vihar, Sarai Kale Khan, New Delhi, Delhi 110013</string>
    <string name="nearest_hospital_humayun_tomb">Jeewan Hospital, Delhi 110014</string>
    <string name="nearest_station_humayun_tomb">Hazarat Nizamuddin Police Station, Delhi 110013</string>
    <string name="title_place_lotus_temple">Lotus Temple</string>
    <string name="detail_place_lotus_temple">Known for its unique architectural design, Lotus Temple is a Bahá’í House of Worship, dedicated to harmony of humanity.\n\nInspired by the lotus flower, the temple boasts of 27 free-standing marble-clad petals, and is surrounded by sprawling gardens and pond. With a height of over 34 metres, it can accommodate around 2500 people altogether.\n\nThe temple welcomes every religion symbolizing the culture of Bahá’í Houses of Worship, and offers a tranquil ambience ideal for rejuvenation.</string>
    <string name="timings_lotus_temple">9:00 am to 5:00 pm</string>
    <string name="nearest_metro_lotus_temple">NSIC Okhla Metro Station, Delhi 110065</string>
    <string name="nearest_hospital_lotus_temple">Apollo Spectra Hospitals, 13, Kailash Rd, Sant Nagar, East of Kailash, New Delhi, Delhi 110065</string>
    <string name="nearest_station_lotus_temple">Police Post Nehru Place, Nehru Place South Delhi, near Place Market, New Delhi, Delhi 110019</string>
    <string name="title_place_cyber_hub">Cyber Hub</string>
    <string name="title_connaught_place_location_one">Barco\'s</string>
    <string name="must_haves_connaught_place_location_one">Tom Kha Soup, Pan Fried Noodles, Chicken Drumstick, Dal Makhani, and Honey Chilli Potato.</string>
    <string name="avg_cost_connaught_place_location_one">₹ 1050</string>
    <string name="timings_connaught_place_location_one">12:30 pm to 11:00 pm</string>
</resources>